--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,31 @@
 /* CSS Document */
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 body.page1 {
-	background-color:rgba(159,205,219,1.00) ;
-	background-image: ;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 h1 {
-	font-family: "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-family: "Pacifico" ,"Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-size: 4.8em;
+	text-align: center;
+	margin: 0;
+	text-decoration: none;
+	font-weight: bold;
 }
 h1.title {
 	text-align: center;
 	margin-left: 30%;
 	margin-right: 30%;
-	margin-bottom: 20px;
+	margin-bottom: 5px;
+	padding: 1%;
+	margin-top: 5px;
 }
 h2 {
 	font-family: "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-}
-h1, h2{
 	font-size: 4em;
-	background-color: rgba(115,124,185,1.00);
+	background-color:;
 	margin-left: 10%;
 	margin-right: 50%;
 	margin: 0;
@@ -28,25 +33,31 @@ h1, h2{
 	text-decoration: none;
 }
 
+
 ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	background-color: rgba(70,98,132,1.00);
+	background-color: rgba(136,175,195,1.00);
+	border-radius: 10%;
+	height: 19%;
 	
 }
 .text {
 	font-size: 1.5em;
 	letter-spacing: .15em;
 	font-weight: bold;
+	font-family: 'Gloria Hallelujah', cursive;
 }
 li{
 	display: inline-block;
 	text-align: center;
-	width: 19%;
+	width: 18%;
 	background-color: rgba(239,210,210,1.00);
 	padding-top: 1%;
+	margin-top: 1%;
 	margin: 0;
+	border-radius: 50%;
 }
 
 .dropdown-content{
@@ -80,21 +91,4 @@ li{
 	font-weight: bold;
 	letter-spacing: 0.1em;
 	font-size: 1.1em;
-}
-
-img.slider {
-	width: 25%;
-	height: 20%;
-	align-content: center;
-	margin-left: 37%;
-	margin-right: 20%;
-	padding: 10px;
-}
-.recent {
-	background-color: rgba(226,191,192,1.00);
-	width: 15%;
-	height: 400px;
-	margin-left: 10%;
-	margin-top:3%;
-	margin-right: 65%;
 }
