--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,10 @@ h2 {
 	margin-top: 11%;
 	margin-bottom: 0;
 	align-content: center;
+	border-top: thick;
+	border-top-style:groove;
+	border-top-color: rgba(252,252,252,0.22);
+	border-top-width: 20px;
 	
 }
 #catChange {
@@ -146,15 +150,67 @@ a {
 	display: inline-block;
 }
 .slider { 
+	background-image: url("images/displayPic1.JPG");
+	background-color: #FEFEF2;
+	list-style-type: none;
+	padding: 0;
+	height: 92%;
+	width: 92%;	
+	margin-left: 4%;
+	margin-top: 2%;
+	margin-bottom: 1%;
+	position: absolute;
+	align-content: center;
+	background-size: cover;
 
 }
 
 #sliderCont {
-	left-margin: 35%;
-	right-margin: 35%;
-	top-margin: 40%:;
-	bottom-margin: 40%;
-	background-color: cyan;
-	z-index: 1001;
+	list-style-type: none;
+	padding: 0;
+	height: 40%;
+	width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
+	margin-top: 3%;
+	position: absolute;
+	align-content: center;
 }
-	
+.recentPosts {
+	list-style-type: none;
+	padding: 0;
+	height: 95%;
+	width: 24%;
+	margin-left: 3%;
+	margin-right: 3%;
+	margin-top: 1%;
+	position: absolute;
+	align-content: left;
+	background-color: #FEFEF2;
+}
+.header {
+	list-style-type: none;
+	padding: 0;
+	height: 10%;
+	width: 98%;
+	margin-left: 3px;
+	margin-right: 1px;
+	margin-top: 0;
+	position: absolute;
+	align-content: left;
+	background-color: rgba(218,218,218,0.05);
+	font-family: "Pacifico" ,"Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-size: 210%;
+	text-align: center;
+}
+.Coalition {
+	list-style-type: none;
+	padding: 0;
+	height: 95%;
+	width: 24%;
+	margin-left: 3%;
+	margin-right: 3%;
+	margin-top: 1%;
+	position: absolute;
+	align-content: right;;
+}
