--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 @import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 @import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Arimo);
+@import url(https://fonts.googleapis.com/css?family=Righteous);
 body.page1 {
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -166,9 +168,8 @@ a {
 }
 
 #sliderCont {
-	list-style-type: none;
 	padding: 0;
-	height: 40%;
+	height: 45%;
 	width: 40%;
 	margin-left: 30%;
 	margin-right: 30%;
@@ -187,6 +188,11 @@ a {
 	position: absolute;
 	align-content: left;
 	background-color: #FEFEF2;
+	border-radius: 5%;
+	border: thick;
+	border-style: ridge;
+	border-color: rgba(252,252,252,0.22);
+	overflow-y: scroll;
 }
 .header {
 	list-style-type: none;
@@ -202,6 +208,7 @@ a {
 	font-family: "Pacifico" ,"Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 	font-size: 210%;
 	text-align: center;
+	z-index:1001;
 }
 
 .Coalition {
@@ -216,6 +223,11 @@ a {
     align-content: right;
     float: right;
     background-color: #FEFEF2;
+	border-radius: 5%;
+	border: thick;
+	border-style: ridge;
+	border-color: rgba(252,252,252,0.22);
+	overflow-y: scroll;
 }
 .slideDescription {
 	background-color: rgba(255,255,255,.75);
@@ -262,11 +274,76 @@ a {
 	margin-left:20%;
 	margin-right: 5%;
 	margin-top: 2%;
+	padding-top: 2%;
 	position: absolute;
 	align-content: left;
-	background-color: rgba(255,255,255,0.85);
-	font-family: "Pacifico" ,"Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-	font-size: 1.3em;
+	background-color: rgba(189,220,240,0.75);
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-size: .9em;
 	text-align: center;
 	border-radius: 10%;
+}
+.authorName {
+	padding: 0;
+	height: 23%;
+	width: 20%;
+	margin-left:15%;
+	margin-right: 60%;
+	font-weight: bold;
+	margin-top: 8%;
+	margin-bottom: 0;
+	padding-top: 2%;
+	position: absolute;
+	align-content: center;
+	background-color: rgba(189,200,240,0.75);
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-size: .9em;
+	text-align: center;
+	border-radius: 10%;
+}
+.Popular {
+	padding: 0;
+	height: 45%;
+	width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
+	margin-bottom: 1%;
+	margin-top: 30%;
+	position: absolute;
+	align-content: center;
+}
+.popCont {
+	padding: 0;
+	height: 92%;
+	width: 92%;
+	margin-left: 4%;
+	margin-right: 4%;
+	margin-bottom: 4%;
+	margin-top: 2%;
+	position: absolute;
+	align-content: center;
+	background-color: rgba(255,255,255,.75);
+	border-radius: 5%;
+}
+.circles {
+	height: 200px;
+    width: 200px;
+	border-radius: 50%;
+	margin-bottom: 2%;
+	margin-top: 2%;
+	border-style: solid;
+	border-width: thick;
+	position: absolute;
+	background-size: contain;
+}
+#topCircle {
+	margin-top: 18%;
+}
+ul {
+	list-style-type: none;
+	text-align: center;
+	align-content: center;
+}
+.CoalitionSchools {
+	 
 }
