--- a/css/styles.css
+++ b/css/styles.css
@@ -186,13 +186,11 @@ a {
 	margin-right: 3%;
 	margin-top: 1%;
 	position: absolute;
-	align-content: left;
 	background-color: #FEFEF2;
 	border-radius: 5%;
 	border: thick;
 	border-style: ridge;
 	border-color: rgba(252,252,252,0.22);
-	overflow-y: scroll;
 }
 .header {
 	list-style-type: none;
@@ -221,13 +219,12 @@ a {
     margin-top: 14%;
     position: absolute;
     align-content: right;
-    float: right;
     background-color: #FEFEF2;
 	border-radius: 5%;
 	border: thick;
 	border-style: ridge;
 	border-color: rgba(252,252,252,0.22);
-	overflow-y: scroll;
+	overflow-x: none;
 }
 .slideDescription {
 	background-color: rgba(255,255,255,.75);
@@ -314,36 +311,68 @@ a {
 }
 .popCont {
 	padding: 0;
-	height: 92%;
+	height: 100%;
 	width: 92%;
 	margin-left: 4%;
 	margin-right: 4%;
 	margin-bottom: 4%;
 	margin-top: 2%;
 	position: absolute;
-	align-content: center;
 	background-color: rgba(255,255,255,.75);
 	border-radius: 5%;
+	align-content: center;
+	overflow-y: scroll;
 }
+
 .circles {
 	height: 200px;
     width: 200px;
 	border-radius: 50%;
 	margin-bottom: 2%;
 	margin-top: 2%;
+	margin-right: 50%;
 	border-style: solid;
-	border-width: thick;
-	position: absolute;
+	border-width: 15px;
 	background-size: contain;
+	position: relative;
+	float: none;
+	align-content: center;
 }
-#topCircle {
-	margin-top: 18%;
-}
+
 ul {
 	list-style-type: none;
 	text-align: center;
 	align-content: center;
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 }
-.CoalitionSchools {
-	 
+.coalitionSchools {
+	text-decoration: none;
+}
+
+li {
+	margin-bottom: 0;
+	margin-top: 15%;
+	color: black;
+	text-decoration: none;
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+}
+#topLetter {
+	margin-top: 30%;
+}
+#topArticle {
+	margin-top: 25%;
+}
+
+.popost {
+	background-color: rgba(154,206,225,1.00);
+	padding: 2%;
+	border-radius: 20%;
+	position: relative;
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+}
+div {
+	color: black;
+	text-decoration: none;
+	font-family: "Righteous" , "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	text-align: center;
 }
